Web2 Assignment 2: quick z-index fix

--- a/WEB2/08 Assignment 2/pokedex/src/view/pokemon-page/pokemon_list/PokemonListItem.css
+++ b/WEB2/08 Assignment 2/pokedex/src/view/pokemon-page/pokemon_list/PokemonListItem.css
@@ -66,6 +66,9 @@
 
     box-shadow: 2px 4px 10px 2px rgba(0, 0, 0, 0.85);
     outline: none;
+
+    position: relative;
+    z-index: 1;
 }
 
 
